--- a/src/Checkbox/styles/index.less
+++ b/src/Checkbox/styles/index.less
@@ -144,11 +144,7 @@
 
     .rs-checkbox-disabled.rs-checkbox-checked &,
     .rs-checkbox-disabled.rs-checkbox-indeterminate & {
-      opacity: 0.3;
-
-      .high-contrast-mode({
-        opacity: 0.5;
-      });
+      opacity: 0.5;
     }
   }
 }
