--- a/src/InputGroup/styles/index.less
+++ b/src/InputGroup/styles/index.less
@@ -191,7 +191,7 @@
   }
 }
 
-.rs-input-group-disabled {
+.rs-input-group.rs-input-group-disabled {
   background-color: var(--rs-input-disabled-bg);
   color: var(--rs-text-disabled);
   cursor: not-allowed;
